// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell should change icon class prefix when using icon-prefix prop 1`] = `
<div>
  <div
    class="rc-cell"
  >
    <i
      class="rc-badge__wrapper rc-cell__left-icon my-icon my-icon-success"
    />
    <div
      class="rc-cell__title"
    >
      Title
    </div>
  </div>
</div>
`;

exports[`Cell should render correctly when using inset prop in Cell.Group 1`] = `
<div>
  <div
    class="rc-cell-group rc-cell-group--inset"
  >
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        单元格
      </div>
      <div
        class="rc-cell__value"
      >
        <span>
          内容
        </span>
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        单元格
        <div
          class="rc-cell__label"
        >
          描述信息
        </div>
      </div>
      <div
        class="rc-cell__value"
      >
        <span>
          内容
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cell should render correctly when using title prop in Cell.Group 1`] = `
<div>
  <div>
    <div
      class="rc-cell-group__title"
    >
      分组1
    </div>
    <div
      class="rc-cell-group rc-hairline--top-bottom"
    >
      <div
        class="rc-cell"
      >
        <div
          class="rc-cell__title"
        >
          单元格
        </div>
        <div
          class="rc-cell__value"
        >
          <span>
            内容
          </span>
        </div>
      </div>
    </div>
    <div
      class="rc-cell-group__title"
    >
      分组2
    </div>
    <div
      class="rc-cell-group rc-hairline--top-bottom"
    >
      <div
        class="rc-cell"
      >
        <div
          class="rc-cell__title"
        >
          单元格
        </div>
        <div
          class="rc-cell__value"
        >
          <span>
            内容
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cell should render correctly when wrapperd with Cell.Group 1`] = `
<div>
  <div
    class="rc-cell-group rc-hairline--top-bottom"
  >
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        单元格
      </div>
      <div
        class="rc-cell__value"
      >
        <span>
          内容
        </span>
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        单元格
        <div
          class="rc-cell__label"
        >
          描述信息
        </div>
      </div>
      <div
        class="rc-cell__value"
      >
        <span>
          内容
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cell should render extra slot correctly 1`] = `
<div>
  <div
    class="rc-cell"
  >
    <div
      class="rc-cell__title"
    >
      Title
    </div>
    <div
      class="rc-cell__value"
    >
      <span>
        Value
      </span>
    </div>
    Custom Extra
  </div>
</div>
`;

exports[`Cell should render icon slot correctly 1`] = `
<div>
  <div
    class="rc-cell"
  >
    <i
      class="rc-badge__wrapper rc-cell__left-icon van-icon van-icon-location-o"
    />
  </div>
</div>
`;

exports[`Cell should render label slot correctly 1`] = `
<div>
  <div
    class="rc-cell"
  >
    <div
      class="rc-cell__title"
    >
      Title
      <div
        class="rc-cell__label"
      >
        Custom Label
      </div>
    </div>
  </div>
</div>
`;

exports[`Cell should render title slot correctly 1`] = `
<div>
  <div
    class="rc-cell"
  >
    <div
      class="rc-cell__title"
    >
      Custom Title
    </div>
  </div>
</div>
`;

exports[`Cell should render value slot correctly 1`] = `
<div>
  <div
    class="rc-cell"
  >
    <div
      class="rc-cell__value rc-cell__value--alone"
    >
      <span>
        Custom Value
      </span>
    </div>
  </div>
</div>
`;
